...
                        <outlet property="brandNameLabel" destination="z2B-ie-xBI" id="I2o-Kn-d98"/>
                        <outlet property="crashButton" destination="lF7-Zj-G79" id="G2X-Ka-WTI"/>
                        <outlet property="loginButton" destination="O7H-0E-i8Z" id="PAs-s7-ave"/>
                        <outlet property="loginTextField" destination="eph-x9-uY6" id="4YR-Gf-IMZ"/>
                        <outlet property="passwordTextField" destination="kaX-rQ-Ogg" id="5sv-Sv-YJN"/>
...
                        <outlet property="creditCardLabel" destination="oBC-bE-aTM" id="k73-NI-pwv"/>
                        <outlet property="creditCardTextView" destination="en1-gd-tCz" id="d2p-y1-xER"/>
                        <outlet property="editInfoButton" destination="yuK-d5-BIz" id="maa-NP-TNq"/>
                        <outlet property="emailLabel" destination="LEo-oN-VNd" id="MRE-06-aF2"/>
                        <outlet property="emailTextView" destination="tdz-TO-wvu" id="fps-ci-Apm"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Каталог товаров" largeTitleDisplayMode="always" id="FsS-9L-3Rt">
                        <barButtonItem key="backBarButtonItem" title="Назад" id="aOR-X2-aPN"/>
                        <userDefinedRuntimeAttributes>
...
                        <outlet property="productDescriptionTextView" destination="kYg-Td-6dO" id="cGe-zd-VEn"/>
                        <outlet property="productIconImageView" destination="seK-LY-D7F" id="qI9-6a-SBi"/>
                        <outlet property="productNameLabel" destination="YXR-Ah-TtX" id="ydW-rG-Rov"/>
                        <outlet property="reviewsTableView" destination="6az-oz-gWv" id="w1J-Sa-9HO"/>
                        <outlet property="scrollView" destination="K2U-xh-osV" id="cei-lC-x3t"/>
...
                                <color key="value" systemColor="systemBackgroundColor"/>
                            </userDefinedRuntimeAttribute>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="mainTabBar"/>
                        </userDefinedRuntimeAttributes>
                    </tabBar>
...
        <scene sceneID="gqv-K6-05u">
            <objects>
                <viewController storyboardIdentifier="BasketVC" title="Корзина" modalPresentationStyle="fullScreen" id="Qmw-L1-muD" customClass="BasketViewController" customModule="GB_1640_Shop" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8s0-Mv-Pf8">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                <color key="value" systemColor="systemBackgroundColor"/>
                            </userDefinedRuntimeAttribute>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="navBarCatalog"/>
                        </userDefinedRuntimeAttributes>
                    </navigationBar>
...
                        <autoresizingMask key="autoresizingMask"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="navBarBasket"/>
                        </userDefinedRuntimeAttributes>
                    </navigationBar>
...
