...
        keyboardHelper.hideKeyboardGesture()
        setupScrollView()
        setupTableView()
        registerNib()
        setupView()
        getReviewData(product: good!)
        addToBasketButton.accessibilityIdentifier = "addToBasket"
        
        Crashlytics.setLog(log: .goodsDetail)
    }

    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
...
    private func setupView() {
        productIconImageView.image = UIImage(named: "mbpTest")
        
        productNameLabel.text = good?.productName
        productNameLabel.font = .systemFont(ofSize: FontSizes.bigLabel.rawValue, weight: .semibold)
        productNameLabel.textAlignment = .center
        productNameLabel.accessibilityIdentifier = "productName"
        
        productDescriptionTextView.text = good?.productDescription
    }
    
    private func getReviewData(product: Good) {
        viewModel.sendGoodsListRequest(productId: product.id ?? 123) { response in
...
